Implementaciond  de los modulos Pedidos, Cocinero, Cajero, y gestor de Inventario con genercion de reporte usando jassperreports